--- a/ktor-rest/build.gradle
+++ b/ktor-rest/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     repositories {
         jcenter()
     }
-    
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
@@ -37,5 +37,7 @@ dependencies {
     compile "io.ktor:ktor-html-builder:$ktor_version"
     compile "org.jetbrains:kotlin-css-jvm:1.0.0-pre.31-kotlin-1.2.41"
     implementation "io.ktor:ktor-jackson:$ktor_version"
+    implementation "io.ktor:ktor-auth:$ktor_version"
+    implementation "io.ktor:ktor-auth-jwt:$ktor_version"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
 }
